# macro_rules_attr

./: Cargo.toml  README.md
src/: lib.rs
tests/: integration_test.rs
